# Automating-DS-DE-Workflows

./: .envrc.example  .gitignore  .gitmodules  README.md  compose.vector-db.yaml  compose.yaml  pyproject.toml
EDA/: Exploratory Data Analysis.ipynb  anaylze.py  benchmark_analysis.html  data_analyzer.py  notebook.ipynb  tree.txt
benchmark/evaluation_examples/examples/jupyter/: setup.sh
docker/: compose.qemu.yaml  compose.webtop.yaml
docker/kasm/: Dockerfile.webtop
docs/: .excalidraw
environment/: Dockerfile  Dockerfile.kasm  Dockerfile.linuxserver  pyproject.toml  startup.sh
evaluation_examples/: README.md
evaluation_examples/examples/excel/0a2e43bf-b26c-4631-a966-af9dfa12c9e5/: 0a2e43bf-b26c-4631-a966-af9dfa12c9e5.json
notes/: Description.md  Improving Spider2-V Benchmark Scores.md  Research Questions.md
notes/.obsidian/: workspace.json
os-world/providers/docker/: README.md  manager.py  provider.py
profiles/config/Code/User/: extensions.json
profiles/config/autostart/: terminal-shortcut.desktop
profiles/kasm_user/Desktop/: terminal.desktop
profiles/vscode/User/: settings.json
src/: IMPLEMENTATION.md  README.md  SANDBOX-SERVER-CLIENT.md  __init__.py  container_orchestrator.py  environment.py  fastapi_sandbox_server.py  notebook.ipynb  orchestrator.py  parallel_sandbox_client.py  portmap.json  run_codegen.py  sandbox_client.py  sandbox_server.py  test.py
src/agent/: __init__.py  build.py  executor.py  sandbox_agent.py  smolagent.py
src/agent/prompts/: code_agent.yaml  structured_code_agent.yaml
src/agent/prompts/defaults/: toolcalling_agent.yaml
src/agent/tools/: sandbox.py
src/agent/utils/: port_pool.py
src/agents/: notebook.ipynb  smolagent.py
src/agents/prompts/defaults/: code_agent.yaml
src/benchmark/evaluation_examples/: test_one.json
src/benchmark/evaluation_examples/examples/jupyter/: setup.sh
src/benchmark/evaluation_examples/examples/jupyter/00b43a0a-b17b-475d-a482-302efe94d4cc/: 00b43a0a-b17b-475d-a482-302efe94d4cc.json
src/benchmark/evaluation_examples/examples/jupyter/5eab2fda-8c01-4b26-918b-0f832ebb1e13/: 5eab2fda-8c01-4b26-918b-0f832ebb1e13.json
src/benchmark/helpers/: __init__.py
src/benchmark/helpers/config/: general.py
src/benchmark/helpers/evaluation/metrics/: table.py  utils.py
src/controller/: recorder.py
src/docker/: Dockerfile  README.md  base_upload.py  compose.kasm.yaml  compose.qemu-test.yaml  compose.qemu.yaml  convert-to-qcow2.sh
src/docker/kasm/: README.md
src/docker/test/: ssh-connection.py
src/eda/: eda_benchmark.py  notebook.ipynb
src/rag/: README.md
src/sandbox/: README.md  __init__.py  agent.py  client.py  configs.py  errors.py  example_usage.py  executor.py  python_executer.py  qemu.py  qemu_old.py  sandbox.py  sandbox_python_executor.py  ssh.py  virtualmachine.py
src/sandbox/server/: main.py  pyproject.toml  start.sh
src/sandbox/server/src/: pyxcursor.py  utils.py
src/sandbox/services/: README.md  main.py  start.sh
src/sandbox/services/src/: recording.py
src/sandbox/smolagents/: agents.py  local_python_executor.py  remote_executors.py
src/sandbox/vm/: ssh.py  virtualmachine.py
src/server/: main.py  pyproject.toml  start.sh
src/server/src/: pyxcursor.py  recorder.py  websocket.py
src/smolagents/: smolagent.py
src/tests/: agent-executor.py  agent-sandbox-executor.py  agent-sandbox-reconnect.py  agent-sandbox-ssh.py  connect_websocket.py  create-snapshot.py  fastapi_sandbox_server.py  normalize_code.py  sandbox-client.py  sandbox-executor.py  sandbox-reconnect.py  sandbox-ssh.py  test_recorder.py  test_sandbox_server.py  websocket_sandbox_server.py
src/tools/: README.md  sandbox_client.py
src/utils/: metrics.py
