[project]
name = "master-thesis"
version = "0.1.0"
description = "Master thesis project: Automating (Data Science & Engineering) Workflows with AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.1.0",
    "tqdm>=4.67.1",
    "websockets>=14.2",
    "smolagents>=1.9.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "docker>=7.1.0",
    "filelock>=3.18.0",
    "paramiko>=3.5.1",
    "pynput>=1.8.1",
    "prompt-toolkit>=3.0.51",
    "rich>=14.0.0",
    "nest-asyncio>=1.6.0",
    "tenacity>=9.1.2",
]


[tool.uv]
dev-dependencies = ["pytest>=8.3.4", "ruff>=0.9.7"]

[tool.uv.workspace]
members = ["src/server"]

[tool.ruff]
# In addition to the standard set of inclusions, include `.pyw` files.
extend-include = ["*.ipynb"]


line-length = 120
lint.select = [
    "E", # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
lint.ignore = [
    "E501", # line too long, handled by black
    "C901", # too complex
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = true
