[project]
name = "server"
version = "0.1.0"
description = "The environment server that makes it possible to interact with the environment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "pillow>=11.1.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
    "websockets>=15.0",
]
