[project]
name = "server"
version = "0.1.0"
description = "The environment server that makes it possible to interact with the environment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "notebook>=7.4.1",
    "numpy>=2.2.4",
    "pillow>=2.32.3",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "requests",
    "uvicorn>=0.34.2",
]
